--- a/style.css
+++ b/style.css
@@ -422,6 +422,7 @@ only screen and (min-height: 575px) {
 
     #content-wrapper {
         padding: 1rem;
+        height: calc(100vh - 2rem);
     }
 
     #main-col {
