--- a/style.css
+++ b/style.css
@@ -410,12 +410,36 @@ img {
     }
 }
 
+/* short screens */
+
+@media only screen
+/*and (max-width: 650px)*/
+and (max-height: 600px) {
+    #home-nav #social {
+        display: none;
+    }
+}
+
+/* really short screen */
+
+@media only screen and (max-height: 550px) {
+    #author-right {
+        display: none;
+    }
+}
+
+@media only screen and (max-height: 450px) {
+    #content {
+        margin-top: 10vh !important;
+    }
+}
+
 
 
 /* anything that is not phone */
 
 @media only screen and (min-width: 650px),
-only screen and (min-height: 575px) {
+only screen and (min-height: 600px) {
     .mobile {
         display: none;
     }
@@ -445,7 +469,7 @@ only screen and (min-height: 575px) {
 /* most phones portrait */
 
 @media only screen and (max-width: 650px),
-only screen and (max-height: 575px) {
+only screen and (max-height: 600px) {
     :root {
         --default-font-size: 14px;
     }
