--- a/style.css
+++ b/style.css
@@ -414,32 +414,6 @@ img {
     }
 }
 
-/* short screens */
-
-@media only screen
-/*and (max-width: 650px)*/
-and (max-height: 600px) {
-    #home-nav #social {
-        display: none;
-    }
-}
-
-/* really short screen */
-
-@media only screen and (max-height: 550px) {
-    #author-right {
-        display: none;
-    }
-}
-
-@media only screen and (max-height: 450px) {
-    #content {
-        margin-top: 10vh !important;
-    }
-}
-
-
-
 /* anything that is not phone */
 
 @media only screen and (min-width: 650px),
@@ -462,6 +436,37 @@ only screen and (min-height: 600px) {
     } */
 }
 
+/* short screens */
+
+@media only screen
+/*and (max-width: 650px)*/
+and (max-height: 600px) {
+    #home-nav #social {
+        display: none;
+    }
+}
+
+/* really short screens */
+
+@media only screen and (max-height: 550px) {
+    #author-right {
+        display: none;
+    }
+}
+
+@media only screen and (max-height: 450px) {
+    #content {
+        margin-top: 10vh !important;
+    }
+}
+
+@media only screen and (max-height: 450px) {
+    :root {
+        --home-section-spacing: 1.5rem;
+    }
+}
+
+
 /* no idea why, but the theme button position seems to trigger with a 1px offset, when it comes to min-width */
 /* @media only screen and (min-width: 571px) {
     #home-nav #theme-toggle {
@@ -476,6 +481,13 @@ only screen and (min-height: 600px) {
 only screen and (max-height: 600px) {
     :root {
         --default-font-size: 14px;
+    }
+
+    #toggle-wrapper {
+        position: fixed;
+        bottom: 0;
+        width: var(--sidebar-width);
+        padding-bottom: 1rem;
     }
 
     #content {
