--- a/run.css
+++ b/run.css
@@ -5,16 +5,19 @@
   justify-content: center;
 }
 
-#message {
-  margin-top: 100px;
-  color: rgb(90, 90, 90);
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 14px;
+body.light-theme canvas {
+  filter: invert(0);
 }
 
-#message h2 {
-  color: rgb(40, 40, 40);
+body.dark-theme canvas {
+  filter: invert(1);
 }
+
+/* #message {
+  margin-top: 100px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 14px;
+} */
 
 #dishes {
   opacity: 0.3;
@@ -114,9 +117,9 @@
 }
 
 @media (max-height: 500px) {
-  #message {
+  /* #message {
     display: none;
-  }
+  } */
 }
 
 #chester-wrapper {
@@ -204,22 +207,6 @@
 
 
 
-/* night / day cycle */
-
-body {
-  transition: background 1s;
-}
-
-#main-frame-error {
-  transition: filter 1s;
-}
-
-#dishes {
-  transition: filter 1s;
-}
-
-
-
 html,
 body {
   padding: 0;
@@ -247,7 +234,6 @@ body {
 /* Offline page */
 
 body .interstitial-wrapper {
-  color: #2b2b2b;
   font-size: 1em;
   line-height: 1.55;
   margin: 0 auto;
@@ -261,7 +247,7 @@ body .runner-container {
   max-width: 600px;
   overflow: hidden;
   position: absolute;
-  top: 35px;
+  top: 6rem;
   width: 44px;
 }
 
