--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ hr {
 }
 
 body.light-theme {
-    transition: color 0.3s linear, background 0.3s;
+    transition: color 0.6s linear, background 0.6s;
     --background-color: rgb(255, 255, 255);
     --text-primary: black;
     --text-light: rgba(125, 125, 125, 0.7);
@@ -99,7 +99,7 @@ body.light-theme {
 }
 
 body.dark-theme {
-    transition: color 0.3s linear, background 0.3s;
+    transition: color 0.6s linear, background 0.6s;
     --background-color: rgb(25, 25, 25);
     --text-primary: white;
     --text-light: rgba(125, 125, 125, 0.7);
@@ -143,7 +143,7 @@ img.small {
 
 #content {
     display: flex;
-    width: var(--content-width-sm);
+    /* width: var(--content-width-sm); */
     max-width: 85vw;
     max-height: 90vh;
     /* here! */
@@ -219,10 +219,10 @@ div.simple-script table.tg tbody tr td+td {
 
 /* initial load */
 
-main:not(#home-main),
+/* main:not(#home-main),
 nav:not(#home-nav) {
     display: none;
-}
+} */
 
 /* text */
 
