--- a/run.css
+++ b/run.css
@@ -270,10 +270,10 @@ body .runner-canvas {
 }
 
 body .controller {
-  background: rgba(247, 247, 247, .1);
+  /* background: rgba(247, 247, 247, .1); */
   height: 100vh;
   left: 0;
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   width: 100vw;
   z-index: 1;
