--- a/run.css
+++ b/run.css
@@ -273,7 +273,7 @@ body .controller {
   position: fixed;
   top: 42vh;
   height: 58vh;
-  background-color: red;
+  /* background-color: red; */
   width: 100%;
   z-index: 1;
 }
@@ -281,7 +281,7 @@ body .controller {
 @media only screen and (max-width: 650px),
 only screen and (max-height: 600px) {
   body .controller {
-    background-color: red;
+    /* background-color: red; */
     left: 0;
     top: 30vh;
     height: 70vh;
