--- a/style.css
+++ b/style.css
@@ -43,6 +43,29 @@ main {
     border: 1px solid var(--text-light);
 } */
 
+#space:hover {
+    cursor: pointer;
+}
+
+#space {
+    position: fixed;
+    width: 100%;
+    height: 55vh;
+    background-color: red;
+    bottom: 0;
+    z-index: 0;
+}
+
+@media only screen and (max-width: 650px),
+only screen and (max-height: 600px) {
+    #space {
+        background-color: red;
+        left: 0;
+        top: 30vh;
+        height: 70vh;
+    }
+}
+
 #easter-egg {
     position: fixed;
     bottom: 0;
