--- a/run.css
+++ b/run.css
@@ -364,3 +364,9 @@ only screen and (max-height: 600px) {
     padding: 0 20px;
   }
 }
+
+div.controller {
+  /* background-color: blue; */
+  width: 50px;
+  height: 50px;
+}
