--- a/run.css
+++ b/run.css
@@ -365,8 +365,6 @@ only screen and (max-height: 600px) {
   }
 }
 
-div.controller {
-  /* background-color: blue; */
-  width: 50px;
-  height: 50px;
-}
+/* div.controller {
+  background-color: yellow;
+} */
