--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ main {
     position: fixed;
     width: 100%;
     height: 55vh;
-    background-color: red;
+    /* background-color: red; */
     bottom: 0;
     z-index: 0;
 }
@@ -59,7 +59,7 @@ main {
 @media only screen and (max-width: 650px),
 only screen and (max-height: 600px) {
     #space {
-        background-color: red;
+        /* background-color: red; */
         left: 0;
         top: 30vh;
         height: 70vh;
