--- a/style.css
+++ b/style.css
@@ -23,6 +23,15 @@
     --par-margin: 0.8rem;
 }
 
+#game-mobile {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    /* z-index: 2; */
+}
+
 main:not(#home-main) {
     padding-bottom: 2rem;
 }
@@ -56,7 +65,7 @@ main {
     z-index: 0;
 }
 
-@media only screen and (max-width: 650px),
+@media only screen and (max-width: 700px),
 only screen and (max-height: 600px) {
     #space {
         /* background-color: red; */
@@ -143,7 +152,7 @@ hr {
 }
 
 body.light-theme {
-    transition: color 0.6s linear, background 0.6s;
+    transition: color 0.4s linear, background 0.4s;
     --background-color: rgb(255, 255, 255);
     --text-primary: black;
     --text-light: rgba(125, 125, 125, 0.7);
@@ -154,7 +163,7 @@ body.light-theme {
 }
 
 body.dark-theme {
-    transition: color 0.6s linear, background 0.6s;
+    transition: color 0.4s linear, background 0.4s;
     --background-color: rgb(25, 25, 25);
     --text-primary: white;
     --text-light: rgba(125, 125, 125, 0.7);
@@ -443,7 +452,7 @@ img {
 
 /* anything that is not phone */
 
-/* @media only screen and (min-width: 650px),
+/* @media only screen and (min-width: 700px),
 only screen and (min-height: 600px) {
 
     .mobile {
@@ -460,7 +469,7 @@ only screen and (min-height: 600px) {
     }
 } */
 
-@media only screen and (min-width: 651px) and (min-height: 600px) {
+@media only screen and (min-width: 701px) and (min-height: 600px) {
     #home-nav #toggle-wrapper {
         position: absolute;
         bottom: 0;
@@ -495,7 +504,7 @@ only screen and (min-height: 600px) {
 
 }
 
-@media only screen and (min-width: 650px) and (min-height: 600px) {
+@media only screen and (min-width: 700px) and (min-height: 600px) {
 
     /* social links */
 
@@ -518,7 +527,7 @@ only screen and (min-height: 600px) {
 /* short screens */
 
 @media only screen
-/*and (max-width: 650px)*/
+/*and (max-width: 700px)*/
 and (max-height: 600px) {
     #home-nav #social {
         display: none;
@@ -559,7 +568,7 @@ and (max-height: 600px) {
 
 /* most phones portrait */
 
-@media only screen and (max-width: 650px),
+@media only screen and (max-width: 700px),
 only screen and (max-height: 600px) {
     :root {
         --default-font-size: 14px;
