--- a/style.css
+++ b/style.css
@@ -389,6 +389,7 @@ div.large-table {
 
 .vowels table tbody tr td+td {
     color: var(--text-light);
+    text-align: right !important;
 }
 
 .vowels table tbody td {
@@ -400,7 +401,7 @@ div.large-table {
 .vowels table td img {
     position: absolute;
     max-width: 40px;
-    right: 0;
+    left: 0;
     bottom: 0;
 }
 
